@@ -2,8 +2,11 @@ package com.hospital.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -12,22 +15,86 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
+
+    private static final String[] PUBLIC_ENDPOINTS = {
+            "/api/auth/**",
+            "/api/chat/**",
+            "/ws/**",
+            "/error"
+    };
+
+    private static final String[] ADMIN_ENDPOINTS = {
+            "/api/admin/**",
+            "/api/staff/**",
+            "/api/inventory/**"
+    };
+
+    private static final String[] DOCTOR_ENDPOINTS = {
+            "/api/doctors/**",
+            "/api/appointments/**",
+            "/api/prescriptions/**"
+    };
+
+    private static final String[] PATIENT_ENDPOINTS = {
+            "/api/patients/**",
+            "/api/medical-records/**"
+    };
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // CORS configuration
                 .cors().and()
+
+                // Disable CSRF for API endpoints
                 .csrf().disable()
+
+                // Session management
+                .sessionManagement()
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                .and()
+
+                // Exception handling
+                .exceptionHandling()
+                .authenticationEntryPoint((request, response, authException) -> {
+                    response.setContentType("application/json");
+                    response.setStatus(401);
+                    response.getWriter().write(
+                            "{\"error\": \"Unauthorized\", \"message\": \"" + authException.getMessage() + "\"}");
+                })
+                .accessDeniedHandler((request, response, accessDeniedException) -> {
+                    response.setContentType("application/json");
+                    response.setStatus(403);
+                    response.getWriter().write(
+                            "{\"error\": \"Forbidden\", \"message\": \"" + accessDeniedException.getMessage() + "\"}");
+                })
+                .and()
+
+                // Request authorization
                 .authorizeHttpRequests()
-                .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/chat/**").permitAll()
-                .requestMatchers("/error").permitAll()
+                // Public endpoints
+                .requestMatchers(PUBLIC_ENDPOINTS).permitAll()
+
+                // Admin endpoints
+                .requestMatchers(ADMIN_ENDPOINTS).hasRole("ADMIN")
+
+                // Doctor endpoints
+                .requestMatchers(DOCTOR_ENDPOINTS).hasAnyRole("ADMIN", "DOCTOR")
+
+                // Patient endpoints
+                .requestMatchers(PATIENT_ENDPOINTS).hasAnyRole("ADMIN", "DOCTOR", "PATIENT")
+
+                // All other requests need authentication
                 .anyRequest().authenticated()
                 .and()
+
+                // Form login configuration
                 .formLogin()
                 .loginProcessingUrl("/api/auth/login")
                 .successHandler((request, response, authentication) -> {
@@ -37,8 +104,21 @@ public class SecurityConfig {
                 .failureHandler((request, response, exception) -> {
                     response.setContentType("application/json");
                     response.setStatus(401);
-                    response.getWriter().write("{\"message\": \"Invalid credentials\"}");
-                });
+                    response.getWriter().write(
+                            "{\"error\": \"Authentication failed\", \"message\": \"" + exception.getMessage() + "\"}");
+                })
+                .and()
+
+                // Logout configuration
+                .logout()
+                .logoutUrl("/api/auth/logout")
+                .logoutSuccessHandler((request, response, authentication) -> {
+                    response.setContentType("application/json");
+                    response.getWriter().write("{\"message\": \"Logout successful\"}");
+                })
+                .deleteCookies("JSESSIONID")
+                .clearAuthentication(true)
+                .invalidateHttpSession(true);
 
         return http.build();
     }
@@ -51,10 +131,38 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        // Allowed origins
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+
+        // Allowed methods
+        configuration.setAllowedMethods(Arrays.asList(
+                HttpMethod.GET.name(),
+                HttpMethod.POST.name(),
+                HttpMethod.PUT.name(),
+                HttpMethod.DELETE.name(),
+                HttpMethod.OPTIONS.name()));
+
+        // Allowed headers
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers",
+                "X-XSRF-TOKEN"));
+
+        // Exposed headers
+        configuration.setExposedHeaders(List.of(
+                "Authorization",
+                "X-XSRF-TOKEN"));
+
+        // Allow credentials
         configuration.setAllowCredentials(true);
+
+        // Max age
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
